@@ -2,13 +2,18 @@
 Used to style the post and page TinyMCE editor.
 */
 
+
+/* IMPORT FONT */
 @import url(//fonts.googleapis.com/css?family=Open+Sans);
-body {font-family:'Open Sans', sans-serif; font-size:0.9em; color:#333; line-height:1.5em; word-wrap:break-word;}
 
 
 /* RESET STYLESHEET */
-h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, ins, mark, 
-em, img, q, small, strong, sub, sup, b, dl, dt, dd, ol, ul, li, table, caption, tr, th, td {
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, 
+a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, 
+small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, 
+fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, 
+article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary, time, mark, audio, video {
 	margin:0;
 	padding:0;
 	border:0;
@@ -34,6 +39,10 @@ table {
 }
 
 
+/* BODY */
+body {font-family:'Open Sans', sans-serif; font-size:0.9em; color:#333; line-height:1.5em; word-wrap:break-word;}
+
+
 /* HEADINGS */
 h1 {font-size:3.0em; line-height:1.2em;}
 h2 {font-size:2.5em; line-height:1.2em;}
@@ -49,15 +58,16 @@ a:hover {text-decoration:underline;}
 
 strong, b {font-weight:bold;}
 small {font-size:0.75em;}
-big {font-size: 1.5em;}
+big {font-size:1.25em;}
 sub {vertical-align:sub; font-size:0.9em;}
 sup {vertical-align:super; font-size:0.9em;}
-ins, mark {font-weight:bold; background:none; color:#08a0ff;}
+ins, mark {font-weight:bold; background:none; text-decoration:none; color:#08a0ff;}
 cite, em, abbr, acronym {font-style:italic;}
-code, pre {margin:10px 0; padding:5px 10px; display:block; border:1px solid #eee;}
+code, kbd, samp, var {font-family:monospace, monospace;}
+pre {margin:10px 0; padding:5px 10px; white-space:pre-wrap; border:1px solid #eee;}
 blockquote, q {margin:10px 0; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; font-style:italic; border-left:2px solid #08a0ff;}
 address {margin:10px 0; padding:0 0 0 20px; display:block; font-size:1.2em; line-height:1.5em; border-left:2px solid #08a0ff;}
-p {margin:0 0 10px; text-align:justify;}
+p {margin:0 0 10px;}
 
 
 /* TABLE AND HTML TAGS */
